ift/include/iftDataSet.h

/**
 * @brief Available status for a sample.
 * @author Samuka Martins
 * @date Jul 6, 2018,
 */
//! swig()
typedef enum ift_sample_status {
    IFT_UNKNOWN         = 0x01,  // undefined status (default)
    IFT_TEST            = 0x02,  // testing sample
    IFT_TRAIN           = 0x04,  // training sample
    IFT_OUTLIER         = 0x08,  // a sample that does not fit to the training set
    IFT_ERROR           = 0x10,  // misclassified sample
    IFT_ARTIFICIAL      = 0x20,  // a sample created by some data augmentation technique
    IFT_SUPERVISED      = 0x40,  // it is a training sample whose true label has been confirmed by a specialist
    IFT_LABELPROPAGATED = 0x80,  // it is a training sample whose true label might not be correct, since it has been propagated by some procedure
    IFT_PROTOTYPE       = 0x100, // it is a representative of a group or class 
    IFT_CENTROID        = 0x200, // it is the centroid of a group
    IFT_ALL             = IFT_UNKNOWN | IFT_TEST | IFT_TRAIN | IFT_OUTLIER | IFT_ERROR |  IFT_ARTIFICIAL | IFT_SUPERVISED | IFT_LABELPROPAGATED | IFT_PROTOTYPE | IFT_CENTROID
} iftSampleStatus;
/**
 * @brief Distance function between two arrays prototype.
 * The alpha coefficients alpha can be used to modify the arc weight
computation in many different ways. These coefficients can be found
by optimization.
 * @date may, 2016
 * @author Peixinho
 */
typedef float (*iftArcWeightFun)(float *f1, float *f2, float *alpha, int n);
/**
 * @brief A sample in a Pattern Recognition problem.
 * Contains the feature descriptor and, for supervised cases, the sample class.
 * @date May, 2016
 * @author Peixinho
 */
//! swig(extend = iftSampleExt.i)
typedef struct ift_sample {
    float *feat;    // feature values - it should be always a pointer to data in iftDataSet struct
    double *projection;
    int truelabel;   // 1,2,...,nclasses
    int label;   // 1,2,....,nclasses
    int id;      // identification which may be either a voxel or the sample's index in the file set
    int group; // 1,2,...,nClusters (used for OPF_unsup)
    // related image or the position of an image in the
    // directory with a related list of images.
    bool isSupervised;
    bool isLabelPropagated;
    int numberTimesChecked;

    float weight;  // probability density, path cost, etc
    uint status;   // Status of the sample: TEST, IFT_TRAIN, IFT_ERROR, IFT_OUTLIER.
} iftSample;
/**
 * @brief Structure used for feature space transformations based on PCA
 * @author Peixinho
 * @date May, 2016
 */
typedef struct _featspaceparam {
  float *mean, *stdev; // parameters used for feature space normalization and centralization
  int nfeats; // size of mean, stdev
  char *w; // binary vector that indicates selected components for SupPCA
  int ncomps; // size of w (number of PCA components before
  // feature space reduction by SupPCA)
  iftMatrix *R; // Projection/rotation matrix (the columns are the eigenvectors)
  iftMatrix *W; // Whitening Transformation
} iftFeatSpaceParam;
//! swig()
typedef enum {
  IFT_REF_DATA_NULL, IFT_REF_DATA_IMAGE, IFT_REF_DATA_FIMAGE, IFT_REF_DATA_MIMAGE, IFT_REF_DATA_FILESET, IFT_REF_DATA_MMKERNEL,
  IFT_REF_DATA_CSV
} iftRefDataType;
/**
 * @brief Dataset structure for pattern recognition.
 * @author Peixinho
 * @date May, 2016
 * Contains a list of samples. Each sample containing the description features. And, for supervised cases, the sample class.
 * See also ::iftSample.
 * @ingroup MachineLearning
 */
//! swig(destroyer = iftDestroyDataSet, extend = iftDataSetExt.i)
typedef struct ift_dataset {
    iftSample *sample;   // sample
    int capacity; //max number of samples (pre allocates this space)
    int nfeats;   // number of features
    int nsamples; // number of samples
    int ngroups;  // number of clusters
    int nclasses; // number of ground truth classes
    int ntrainsamples; // number of training samples
    iftArcWeightFun iftArcWeight; // distance function
    int function_number; // This field is used to store the ID of the distance function set with iftSetDistanceFunction. It allows the
    // proper setting of the distance function when using iftWriteOPFDataset and iftReadOPFDataset
    float *alpha;   // coefficients used for arc weight computation
    iftRefDataType ref_data_type; // type of the Reference Data (mainly used to read and write datasets)
    void *ref_data; // it might be an image, for voxel datasets, a text file with image filenames, for image datasets, a region graph, for supervoxel datasets, etc.
    iftFeatSpaceParam fsp; // parameters of the feature scape transformation
    iftMatrix* data;
    iftDoubleMatrix* projection;
} iftDataSet;
/**
 * @brief Creates an empty dataset.
 * @param nsamples Number of samples in the dataset.
 * @param nfeats Number of features in dataset samples.
 * @date May, 2016
 * @return The new dataset.
 */
//! swig(newobject, stable)
iftDataSet *iftCreateDataSet(int nsamples, int nfeats);
/**
 * @brief Creates an empty dataset, without feature vectors allocation. See also iftCreateDataSet().
 * Create an iftDataSet with no Feature allocation, used for address copy between datasets.
 * @param nsamples Number of samples in the dataset.
 * @param nfeats Number of features in dataset samples.
 * @date May, 2016
 * @return The new dataset.
 */
iftDataSet *iftCreateDataSetWithoutFeatsVector(int nsamples, int nfeats);
/**
 * @brief Destroys a dataset object (and destroy their Sample Feature Vectors).
 * @author Peixinho
 * @date May, 2016
 * @param Z Dataset to be destroyed.
 */
void iftDestroyDataSet(iftDataSet **Z);
/**
 * @brief Creates a copy of the dataset (copying or just pointing their feature vectors).
 * @date May, 2016
 *
 * @warning If <b>copy_feats</b> is false, the feature vectors are only assigned/pointed to the original ones. \n
 * Then, BE CAREFUL when destroying this dataset. \n
 * Use the function @ref iftDestroyDataSetWithNoFeatVectors()
 *
 * @param Z          The dataset to be copied.
 * @param copy_feats If true, it copies the sample feature vectors. Otherwise, it only points them.
 * @return The new dataset.
 */
//! swig(newobject, stable)
iftDataSet *iftCopyDataSet(   iftDataSet *Z, bool copy_feats);
/**
 * @brief Reads an OPF Dataset.
 * @author Samuel Martins
 * @date Jun 28, 2016
 *
 * @param  pathname Dataset's pathname.
 * @return          Loaded Dataset.
 */
iftDataSet *iftReadOPFDataSet(const char *pathname);
/**
 * @brief Writes an OPF Dataset.
 * @author Samuel Martins
 * @date Jun 28, 2016
 *
 * @param Z        Dataset to be stored.
 * @param pathname Dataset's pathname.
 */
void iftWriteOPFDataSet(   iftDataSet *Z, const char *pathname);
/**
 * @brief Normalize the dataset features by the z-score method. If a FeatSpaceParam struct is passed as a parameter it will not compute the
 * mean and the standard deviation of the dataset and get this values from the struct, otherwise pass NULL
 * @param Z Dataset to be normalized.
 * @param fsp Pointer to a feature space parameter struct. Pass NULL if we need to compute the mean and standard deviation from the dataset samples.
 * @param stdev_factor: a small number that is added to the standard
 * deviation to avoid division by zero during normalization.
 * @modified by Adan Echemendia, Alexandre Falcão
 * @return The normalized dataset.
 */
  iftDataSet *iftNormalizeDataSetByZScore(iftDataSet *Z, iftFeatSpaceParam *fsp, float stdev_factor);
iftDataSet *iftCentralizeDataSet(iftDataSet *Z);
/**
 * @brief Normalize the testing dataset according to the data distribution found in the training dataset.
 * @param Z1 Training dataset.
 * @param Z2 Testing dataset.
 * @return Normalized testing dataset.
 */
iftDataSet *iftNormalizeTestDataSet(iftDataSet *Z1, iftDataSet *Z2);
/**
 * @brief Centralize the testing dataset according to the data distribution found in the training dataset.
 * @param Z1 Training dataset.
 * @param Z2 Testing dataset.
 * @return Centralized testing dataset.
 */
iftDataSet *iftCentralizeTestDataSet(iftDataSet *Z1, iftDataSet *Z2);
/**
 * @brief Apply the PCA dimensionality reduction in the dataset features.
 * @param Z The original dataset.
 * @param num_of_comps Number of principal components.
 * @return The reduced dataset.
 * @date May, 2016
 * @author Peixinho
 */
iftDataSet *iftTransFeatSpaceByPCA(iftDataSet *Z, int num_of_comps);
/**
 * @brief Given the PCA transform pre computed in Z1, applies the dimensionality reduction in Z2.
 * @param Z1 The PCA trained dataset.
 * @param Z2 Input dataset.
 * @param num_of_comps Number of principal components.
 * @return The reduced dataset.
 * @date May, 2016
 * @author Peixinho
 * @sa iftInverseTransformTestDataSetByPCA().
 */
iftDataSet *iftTransformTestDataSetByPCA(iftDataSet *Z1, iftDataSet *Z2);
/**
 * @brief Set the status of all samples in the dataset.
 * @note If status == IFT_TRAIN, Z->ntrainsamples = Z->nsamples.
 * @lastupdate Jul 6, 2018 (Samuka Martins)
 */
//! swig(stable)
void iftSetStatus(iftDataSet *Z, iftSampleStatus status);
/**
 * Transform the dataset samples in norm one.
 * @param Z Input dataset
 * @return The normalized dataset
 */
iftDataSet *iftNormOneDataSet(iftDataSet *Z);
/**
 * @brief Defines the distance function for the dataset.
 * @param Z dataset
 * @param function_number Function number [1, 11].
 */
void iftSetDistanceFunction(iftDataSet *Z, int function_number);